--- a/html_ui/Pages/VCockpit/Instruments/Airliners/B787_10/FMC/B787_10_FMC.css
+++ b/html_ui/Pages/VCockpit/Instruments/Airliners/B787_10/FMC/B787_10_FMC.css
@@ -35,7 +35,7 @@
     width: 100%;
     height: 100%;
     vertical-align: top;
-    background-color: #141414;
+    background-color: #5c656f;
 }
 
 #Electricity[state=off] {
@@ -218,11 +218,15 @@
 }
 
 .fms-button.active {
-    background-color: #382F30;
-    border-top: 1px solid black;
-    border-left: 1px solid black;
-    border-right: 2px solid black;
-    border-bottom: 2px solid black;
+    background-color: #8d828a;
+    border-style: outset;
+    border-width: 3px;
+    border-color: #736f6f;
+    border-top-color: #534f4f;
+    border-left-color: #736f6f;
+    border-right-color: #e0e0e0;
+    border-bottom-color: #e0e0e0;
+    outline: 2px solid black;
 }
 
 .fms-button {
