--- a/html_ui/Pages/VCockpit/Instruments/Airliners/B787_10/FMC/B787_10_FMC.css
+++ b/html_ui/Pages/VCockpit/Instruments/Airliners/B787_10/FMC/B787_10_FMC.css
@@ -348,4 +348,16 @@
     background-color: #36c8d2;
 }
 
+/** FMC separator */
+
+#Borders {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    border-right: 4px ridge white;
+    pointer-events: none;
+}
+
 /*# sourceMappingURL=B787_10_FMC.css.map */
