--- a/html_ui/Pages/VCockpit/Instruments/Airliners/B787_10/PFD/B787_10_PFD.css
+++ b/html_ui/Pages/VCockpit/Instruments/Airliners/B787_10/PFD/B787_10_PFD.css
@@ -1,5 +1,6 @@
 :root {
     --bodyHeightScale: 1;
+    --colorAmber: #ffbf00;
 }
 
 @keyframes TemporaryShow {
@@ -113,6 +114,7 @@ b787-10-pfd-element #MainFrame {
 b787-10-pfd-element #LeftDisplay {
     transform: rotateX(0);
     flex: 0 0 33%;
+    /* width: 33%; */
     background: black;
     border-right: 6px solid #4E4E50;
 }
@@ -350,6 +352,7 @@ b787-10-pfd-element #RightDisplay > .bottom #Map bing-map {
 }
 
 b787-10-pfd-element #RightDisplay > .bottom #Compass {
+    display: block;
     transform: rotateX(0);
     position: absolute;
     top: 0%;
@@ -372,4 +375,148 @@ b787-10-pfd-element #RightDisplay > .bottom #CompassInfos {
     z-index: 2;
 }
 
-/*# sourceMappingURL=B787_10_PFD.css.map */
+/** IRS Modeling */
+
+b787-10-pfd-element #RightDisplay > .top #FakeBlackMask {
+    transform: rotateX(0);
+    position: absolute;
+    width: 1000px;
+    height: 1000px;
+    border: none;
+    background-color: black;
+    overflow: hidden;
+}
+
+b787-10-pfd-element #RightDisplay > .top #FakeBlackMask > #FakeMaskSvg {
+    transform: translate(27px, -115px) scale(0.7);
+}
+
+b787-10-pfd-element #RightDisplay > .top #FakeBlackMask > #FakeMaskSvg > rect {
+    stroke-width: 1;
+    stroke: var(--colorAmber);
+    fill: none;
+}
+
+b787-10-pfd-element #RightDisplay > .top #FakeBlackMask > #FakeMaskSvg > text {
+    fill: var(--colorAmber);
+    font-size: 18px;
+    letter-spacing: 8px;
+}
+
+b787-10-pfd-element #RightDisplay > .top #FakeBlackMask > #FakeMaskSvg > text#AttText {
+    fill: var(--colorAmber);
+    font-size: 21px;
+    font-family: Roboto-Bold;
+    text-anchor: middle;
+    letter-spacing: normal;
+    alignment-baseline: central;
+}
+
+b787-10-pfd-element #RightDisplay > .top #FakeBlackMask > #FakeMaskSvg > #hor-left {
+    fill: none;
+    stroke: white;
+    stroke-width: 1px;
+}
+
+b787-10-pfd-element #RightDisplay > .top #FakeBlackMask > #FakeMaskSvg > #hor-right {
+    fill: none;
+    stroke: red;
+    stroke-width: 1px;
+}
+
+b787-10-pfd-element #RightDisplay > .top #FakeBlackMask > #FakeMaskSvg > #hor-center {
+    stroke: green;
+    stroke-width: 3px;
+}
+
+/** IRS States */
+
+/** Show mask when IRS is not aligned - Selectors OK */
+#FakeBlackMask[irs-state=off] #FakeBlackMask[irs-state=aligning] {
+    display: block;
+}
+
+#FakeBlackMask[irs-state=aligned] {
+    display: none;
+}
+
+/** Hide VSpeed - ok */
+jet-pfd-vspeed-indicator[irs-state=off], jet-pfd-vspeed-indicator[irs-state=aligning] {
+    display: none;
+}
+
+jet-pfd-vspeed-indicator[irs-state=aligned] {
+    display: block;
+}
+
+#selectedHeadingGroup[irs-state=off], #selectedHeadingGroup[irs-state=aligning] {
+    display: none;
+}
+
+#selectedHeadingGroup[irs-state=aligned] {
+    display: block;
+}
+
+#VertBox[irs-state=off], #VertText[irs-state=off] {
+    display: block;
+}
+
+#VertBox[irs-state=aligning], #VertBox[irs-state=aligned], #VertText[irs-state=aligning], #VertText[irs-state=aligned] {
+    display: none;
+}
+
+#AttBox[irs-state=off], #AttText[irs-state=off], #AttBox[irs-state=aligning], #AttText[irs-state=aligning] {
+    display: block;
+}
+
+#AttBox[irs-state=aligned], #AttText[irs-state=aligned] {
+    display: none;
+}
+
+b787-10-pfd-element #RightDisplay > .bottom > #FakeHdgSvg > rect {
+    stroke-width: 1;
+    stroke: var(--colorAmber);
+    fill: none;
+}
+
+b787-10-pfd-element #RightDisplay > .bottom > #FakeHdgSvg > text {
+    fill: var(--colorAmber);
+    font-size: 14px;
+    font-family: Roboto-Bold;
+    text-anchor: middle;
+    letter-spacing: normal;
+    alignment-baseline: central;
+}
+
+#FakeHdgSvg[irs-state=off], #FakeHdgSvg[irs-state=aligning] {
+    display: block;
+    position: absolute;
+}
+
+#FakeHdgSvg[irs-state=aligned] {
+    display: none;
+}
+
+#GroundRibbonGroup[irs-state=off], #GroundRibbonGroup[irs-state=aligning] {
+    display: none;
+}
+
+#GroundRibbonGroup[irs-state=aligned] {
+    display: block;
+}
+
+#GroundLineGroup[irs-state=off], #GroundLineGroup[irs-state=aligning] {
+    display: none;
+}
+
+#GroundLineGroup[irs-state=aligned] {
+    display: block;
+}
+
+b787-10-pfd-element #RightDisplay > .bottom #Compass:not([irs-state=aligned]) {
+    /* display: none; */
+}
+
+b787-10-pfd-element #RightDisplay > .bottom #CompassInfos:not([irs-state=aligned]) {
+    /* display: none; */
+}
