fixed waypoint info on ND

--- a/html_ui/Pages/VCockpit/Instruments/Airliners/B787_10/MFD/Pages/B787_10_ND.css
+++ b/html_ui/Pages/VCockpit/Instruments/Airliners/B787_10/MFD/Pages/B787_10_ND.css
@@ -306,6 +306,11 @@ b787-10-nd-element #NDInfo #TopBox text.Large {
     fill: white;
 }
 
+b787-10-nd-element #NDInfo #TopBox #Waypoint #WP_Name {
+    fill: magenta;
+}
+
+
 b787-10-nd-element #NDInfo #TopBox text.Units {
     font-size: 30px;
     fill: cyan;
