--- a/html_ui/Pages/VCockpit/Instruments/Airliners/B787_10/MFD/Pages/B787_10_ND.css
+++ b/html_ui/Pages/VCockpit/Instruments/Airliners/B787_10/MFD/Pages/B787_10_ND.css
@@ -1,5 +1,6 @@
 :root {
     --bodyHeightScale: 1;
+    --colorAmber: #ffbf00;
 }
 
 @keyframes TemporaryShow {
@@ -502,6 +503,237 @@ b787-10-nd-element[border=right] #Borders {
     height: 100%;
     border-right: 2px inset white;
     pointer-events: none;
+}
+
+/** IRS Modeling **/
+
+b787-10-nd-element[halfsize=true] #align-times:not([irs-state=aligned]) {
+    display: block;
+    position: absolute;
+    border: none;
+    left: 0%;
+    top: -2%;
+    width: 200px;
+    height: 110px;
+    background-color: black;
+}
+
+b787-10-nd-element #align-times {
+    display: none;
+}
+
+b787-10-nd-element #align-times2:not([irs-state=aligned]) {
+    display: block;
+    position: absolute;
+    border: none;
+    left: 0%;
+    top: -2%;
+    width: 400px;
+    height: 200px;
+    background-color: black;
+}
+
+b787-10-nd-element[halfsize=true] #align-times2 {
+    display: none;
+}
+
+b787-10-nd-element #align-times text {
+    fill: var(--color-white);
+    font-size: 15px;
+    font-family: Roboto-Light;
+    text-anchor: middle;
+    alignment-baseline: central;
+}
+
+b787-10-nd-element #align-times2 text {
+    fill: var(--color-white);
+    font-size: 30px;
+    width: 400px;
+    font-family: Roboto-Light;
+    text-anchor: start;
+    alignment-baseline: central;
+}
+
+
+b787-10-nd-element #align-times text.align {
+    fill: var(--color-white);
+    font-size: 15px;
+    font-family: Roboto-Bold;
+    text-anchor: start;
+    alignment-baseline: central;
+}
+
+b787-10-nd-element #align-times2 text.align {
+    fill: var(--color-white);
+    text-anchor: start;
+    alignment-baseline: central;
+}
+
+#Map[irs-state=off], #Map[irs-state=inited], #Map[irs-state=aligning],
+#ArcRangeGroup[irs-state=off], #ArcRangeGroup[irs-state=inited], #ArcRangeGroup[irs-state=aligning],
+map-instrument[irs-state=off], map-instrument[irs-state=inited], map-instrument[irs-state=aligning],
+#headingGroup[irs-state=off], #headingGroup[irs-state=inited], #headingGroup[irs-state=aligning],
+#CourseInfo[irs-state=off], #CourseInfo[irs-state=inited], #CourseInfo[irs-state=aligning],
+#selectedHeadingGroup[irs-state=off], #selectedHeadingGroup[irs-state=inited], #selectedHeadingGroup[irs-state=aligning],
+#selectedTrackGroup[irs-state=off], #selectedTrackGroup[irs-state=inited], #selectedTrackGroup[irs-state=aligning],
+#ILSGroup[irs-state=off], #ILSGroup[irs-state=inited], #ILSGroup[irs-state=aligning],
+#currentRefGroup[irs-state=off], #currentRefGroup[irs-state=inited], #currentRefGroup[irs-state=aligning],
+#RangeGroup[irs-state=off], #RangeGroup[irs-state=inited], #RangeGroup[irs-state=aligning],
+#NDInfo[irs-state=off], #NDInfo[irs-state=inited], #NDInfo[irs-state=aligning],
+#circleGroup text[irs-state=off], #circleGroup text[irs-state=inited], #circleGroup text[irs-state=aligning],
+#outerCircle text[irs-state=off], #outerCircle text[irs-state=inited], #outerCircle text[irs-state=aligning] {
+    display: none;
+}
+
+b787-10-nd-element[mapstyle=plan] #FakeCompassBox {
+    display: none;
+}
+
+b787-10-nd-element[mapstyle=plan] #FakeCompassBoxHdg {
+    display: none;
+}
+
+b787-10-nd-element[mapstyle=plan] #FakeCompassBoxHdg text {
+    display: none;
+}
+
+b787-10-nd-element[mapstyle=plan] #FakeCompassBoxHdg path {
+    display: none;
+}
+
+b787-10-nd-element[mapstyle=plan] #FakeMapBox {
+    display: none;
+}
+
+b787-10-nd-element[mapstyle=plan] #FakeMapBox text {
+    display: none;
+}
+
+b787-10-nd-element[mapstyle=plan] #FakeMapBox path {
+    display: none;
+}
+
+b787-10-nd-element #FakeCompassBox {
+    transform: rotateX(0);
+    position: absolute;
+    border: none;
+    left: 0%;
+    top: -2%;
+    width: 100%;
+    height: 100%;
+}
+
+b787-10-nd-element #FakeCompassBoxHdg {
+    transform: rotateX(0);
+    position: absolute;
+    border: none;
+    left: 0%;
+    top: -2%;
+    width: 100%;
+    height: 100%;
+}
+
+b787-10-nd-element #FakeCompassBoxHdg text {
+    fill: var(--colorAmber);
+    font-size: 21px;
+    font-family: Roboto-Bold;
+    text-anchor: middle;
+    alignment-baseline: central;
+}
+
+b787-10-nd-element #FakeCompassBoxHdg path {
+    stroke: var(--colorAmber);
+    stroke-width: 1;
+    fill: none;
+}
+
+b787-10-nd-element #FakeMapBox {
+    transform: rotateX(0);
+    position: absolute;
+    border: none;
+    left: 0%;
+    top: -2%;
+    width: 100%;
+    height: 100%;
+    background-color: transparent;
+}
+
+b787-10-nd-element #FakeMapBox text {
+    fill: var(--colorAmber);
+    font-size: 21px;
+    font-family: Roboto-Bold;
+    text-anchor: middle;
+    alignment-baseline: central;
+}
+
+b787-10-nd-element #FakeMapBox path {
+    stroke: var(--colorAmber);
+    stroke-width: 1;
+    fill: none;
+}
+
+b787-10-nd-element[halfsize=true] #FakeCompassBoxHdg {
+    transform: translate(0px, -218px) scale(0.755);
+}
+
+b787-10-nd-element[halfsize=true] #FakeCompassBox {
+    transform: translate(0px, -218px) scale(0.755);
+}
+
+
+/*** DEV ***/
+
+#Map[irs-state=aligned],
+map-instrument[irs-state=aligned],
+#headingGroup[irs-state=aligned],
+#CourseInfo[irs-state=aligned],
+#selectedHeadingGroup[irs-state=aligned],
+#selectedTrackGroup[irs-state=aligned],
+#ILSGroup[irs-state=aligned],
+#currentRefGroup[irs-state=aligned],
+#RangeGroup[irs-state=aligned],
+#NDInfo[irs-state=aligned]
+#circleGroup text[irs-state=aligned] {
+    display: block;
+}
+
+#time-to-align[irs-state=aligning] #time-to-align2[irs-state=aligning] {
+    display: block;
+}
+
+#time-to-align[irs-state=off], #time-to-align[irs-state=aligned], #time-to-align2[irs-state=off], #time-to-align2[irs-state=aligned] {
+    display: none;
+}
+
+#align-times[irs-state=aligned], #align-times2[irs-state=aligned], #FakeMapBox[irs-state=aligned], #FakeCompassBoxHdg[irs-state=aligned], #FakeCompassBox[irs-state=aligned] {
+    display: none;
+}
+
+#FakeCompassBoxHdg[irs-state=off] {
+    display: block;
+}
+
+#FakeCompassBoxHdg[irs-state=inited], #FakeCompassBoxHdg[irs-state=aligning], #FakeCompassBoxHdg[irs-state=aligned] {
+    display: none;
+}
+
+#FakeCompassBox[irs-state=off], #FakeCompassBox[irs-state=aligned] {
+    display: none;
+}
+
+#FakeCompassBox[irs-state=inited], #FakeCompassBox[irs-state=aligning] {
+    display: block;
+}
+
+#l-align[irs-state=aligning], #l-align2[irs-state=aligning], #c-align[irs-state=aligning], #r-align[irs-state=aligning] {
+    display: block;
+}
+
+#l-align[irs-state=off], #l-align[irs-state=inited], #l-align[irs-state=aligned],
+#l-align2[irs-state=off], #l-align2[irs-state=inited], #l-align2[irs-state=aligned],
+#c-align[irs-state=off], #c-align[irs-state=inited], #c-align[irs-state=aligned],
+#r-align[irs-state=off], #r-align[irs-state=inited], #r-align[irs-state=aligned] {
+    display: none;
 }
 
 /*# sourceMappingURL=B787_10_ND.css.map */
