selected heading line disappears after few seconds

--- a/html_ui/Pages/VCockpit/Instruments/Airliners/B787_10/MFD/Pages/B787_10_ND.css
+++ b/html_ui/Pages/VCockpit/Instruments/Airliners/B787_10/MFD/Pages/B787_10_ND.css
@@ -694,7 +694,7 @@ map-instrument[irs-state=aligned],
 #RangeGroup[irs-state=aligned],
 #NDInfo[irs-state=aligned]
 #circleGroup text[irs-state=aligned] {
-    display: block;
+    /** display: block; */
 }
 
 #time-to-align[irs-state=aligning] #time-to-align2[irs-state=aligning] {
