--- a/html_ui/Pages/VCockpit/Instruments/Airliners/B787_10/FMC/B787_10_FMC.css
+++ b/html_ui/Pages/VCockpit/Instruments/Airliners/B787_10/FMC/B787_10_FMC.css
@@ -42,6 +42,18 @@
     display: none;
 }
 
+.fms-mask{
+    display: none;
+    position: absolute;
+    vertical-align: top;
+    width: 97.5%;
+    height: 100%;
+    margin: 10px;
+    margin-top: 15px;
+    background-color: transparent;
+    z-index: 1000;
+}
+
 .fms-container {
     display: inline-block;
     vertical-align: top;
