--- a/html_ui/Pages/VCockpit/Instruments/Airliners/B787_10/FMC/B787_10_FMC.css
+++ b/html_ui/Pages/VCockpit/Instruments/Airliners/B787_10/FMC/B787_10_FMC.css
@@ -72,8 +72,6 @@
     height: 100%;
     margin: -10px;
     background-color: #afaebf;
-    border-right: 3px solid black;
-    border-left: 1px solid black;
 }
 
 .fms-header {
@@ -369,7 +367,7 @@
 #Borders {
     position: absolute;
     top: 0;
-    left: 0;
+    left: -638px;
     width: 100%;
     height: 100%;
     border-right: 4px ridge white;
