Changed font of FMC

--- a/html_ui/Pages/VCockpit/Instruments/Airliners/B787_10/FMC/B787_10_FMC.css
+++ b/html_ui/Pages/VCockpit/Instruments/Airliners/B787_10/FMC/B787_10_FMC.css
@@ -26,6 +26,13 @@
     font-style: normal;
 }
 
+@font-face {
+    font-family: "Heavy";
+    src: url("/Heavy/fonts/Heavy787FMC.otf") format("opentype");
+    font-weight: normal;
+    font-style: normal;
+}
+
 #Mainframe {
     width: 100%;
     height: 100%;
