--- a/html_ui/Pages/VCockpit/Instruments/Airliners/B787_10/MFD/B787_10_VSD.css
+++ b/html_ui/Pages/VCockpit/Instruments/Airliners/B787_10/MFD/B787_10_VSD.css
@@ -1,12 +1,61 @@
 body {
     background-color: black;
     border-left: 5px white;
-    margin: 50px;
-    margin-bottom: 50px;
+    
 }
-  
 
+.distances {
+    color: white;
+    text-align: bottom;
+    width: 100%;
+    height: 80px;
+    padding: 1px;
+    background-color: gray;
+    color: #ffffff;
+    position: fixed;
+    bottom: 0;
+    text-align: center;
+    margin-left: auto;
+    margin-right: auto;
+}
 
+#distance1 {
+    text-align: center;
+    color: white;
+    width: 20%;
+    float: left;
+    z-index: 100;
+
+}
+
+#distance2 {
+    color: white;
+    width: 20%;
+    float: left;
+    z-index: 100;
+
+}
+
+#distance3 {
+    color: white;
+    width: 20%;
+    float: left;
+    z-index: 100;
+}
+
+#distance4 {
+    color: white;
+    width: 20%;
+    float: left;
+    z-index: 100;
+}
+
+#distance5 {
+    color: white;
+    width: 20%;
+    float: left;
+    z-index: 100;
+}
 
 #waypoint1 {
     text-align: center;
@@ -46,52 +95,89 @@ body {
     z-index: 100;
 }
 
+#const1 {
+    text-align: center;
+    color: white;
+    width: 20%;
+    float: left;
+    z-index: 100;
+
+}
+
+#const2 {
+    color: magenta;
+    width: 20%;
+    float: left;
+    z-index: 100;
+
+}
+
+#const3 {
+    color: black;
+    width: 20%;
+    float: left;
+    z-index: 100;
+}
+
+#const4 {
+    color: white;
+    width: 20%;
+    float: left;
+    z-index: 100;
+}
+
+#const5 {
+    color: white;
+    width: 20%;
+    float: left;
+    z-index: 100;
+}
 .line1 {
     border-left: 3px dashed white;
-    height: 700px;
+    height: 660px;
     position: absolute;
-    left: 13%;
-    margin-top: 100px;
+    left: 11%;
+    margin-top: 45px;
     margin-left: -3px;
     top: 0;
   }
 
   .line2 {
     border-left: 3px dashed magenta;
-    height: 700px;
+    height: 660px;
     position: absolute;
-    left: 24%;
-    margin-top: 100px;
+    left: 23.2%;
+    margin-top: 45px;
     margin-left: -3px;
     top: 0;
   }
 
   .line3 {
     border-left: 3px dashed white;
-    height: 700px;
+    height: 660px;
     position: absolute;
     left: 43%;
-    margin-top: 100px;
+    margin-top: 45px;
     margin-left: -3px;
     top: 0;
   }
 
   .line4 {
     border-left: 3px dashed white;
-    height: 700px;
+    height: 660px;
     position: absolute;
-    left: 61.5%;
-    margin-top: 100px;
+    left: 63%;
+    margin-top: 45px;
     margin-left: -3px;
     top: 0;
   }
 
   .line5 {
     border-left: 3px dashed white;
-    height: 700px;
+    height: 660px;
     position: absolute;
-    left: 80.2%;
-    margin-top: 100px;
+    left: 83%;
+    margin-top: 45px;
     margin-left: -3px;
     top: 0;
   }
@@ -104,7 +190,7 @@ body {
     height:700px;
     background: clear;
     border: 80px gray;
-    border-style: none none solid solid;
+    border-style: none none solid none;
     z-index: 50;
 }
 
