--- a/html_ui/Pages/VCockpit/Instruments/Airliners/B787_10/MFD/B787_10_VSD.css
+++ b/html_ui/Pages/VCockpit/Instruments/Airliners/B787_10/MFD/B787_10_VSD.css
@@ -13,6 +13,17 @@ body {
         color: white;
 
 }
+
+#currentAlt {
+    position: fixed;
+    top: 2px;
+    color: magenta;
+    margin-top: 10px;
+    font-size: large;
+    padding: 3px;
+    margin-bottom: 3px;
+
+}
 #altitude1 {
     margin-bottom: 5cm;
     
@@ -43,7 +54,7 @@ body {
 #altMrk2 {
     position: absolute;
     right: 0px;
-    top: 10px;
+    top: 215px;
     height: 2px;
     width: 20px;
     background-color: white;
@@ -52,7 +63,7 @@ body {
 #altMrk3 {
     position: absolute;
     right: 0px;
-    top: 10px;
+    top: 423px;
     height: 2px;
     width: 20px;
     background-color: white;
@@ -61,7 +72,7 @@ body {
 #altMrk4 {
     position: absolute;
     right: 0px;
-    top: 10px;
+    top: 630px;
     height: 2px;
     width: 20px;
     background-color: white;
@@ -81,6 +92,7 @@ body {
     text-align: center;
     margin-left: 1.5cm;
     margin-right: auto;
+    z-index: 50;
 }
 
 #distance1 {
@@ -273,9 +285,11 @@ body {
     top: 0;
   }
 
-  .lines {
-     
-  }
+  #aglLine {
+    border-bottom: 3px dashed #00ff00;
+    height: 743px;
+    z-index: 1;
 
+}
 
 
