added vertical direction indicator

--- a/html_ui/Pages/VCockpit/Instruments/Airliners/B787_10/MFD/B787_10_VSD.css
+++ b/html_ui/Pages/VCockpit/Instruments/Airliners/B787_10/MFD/B787_10_VSD.css
@@ -368,3 +368,14 @@ body {
     left: 25.1%;
   }
 
+  #planevd {
+    transform: rotate(-10deg);
+    border-left: 275px solid white;
+    height: 2px;
+    position: absolute;
+    left: 29%;
+    bottom: 54.9%;
+    z-index: 30
+    
+    
+  }
