--- a/html_ui/Pages/VCockpit/Instruments/Airliners/B787_10/MFD/B787_10_VSD.css
+++ b/html_ui/Pages/VCockpit/Instruments/Airliners/B787_10/MFD/B787_10_VSD.css
@@ -1,6 +1,5 @@
 body {
     background-color: black;
-    border-left: 5px white;
     
 }
 
@@ -63,7 +62,7 @@ body {
 }
 #altitude3 {
     margin-top: 21px;
-    margin-bottom: 189px;
+    margin-bottom: 500px;
    
 }
 #altitude4 {
@@ -102,7 +101,7 @@ body {
 #altMrk4 {
     position: absolute;
     right: 0px;
-    top: 630px;
+    top: 71.5%;
     height: 1.5px;
     width: 20px;
     background-color: white;
@@ -617,7 +616,7 @@ body {
     height: 3px;
     position: fixed;
     left: 85%;
-    bottom: 67.2%;
+    bottom: 67.1%;
     z-index: 29;
     
   }
